Show all todo data

--- a/ToDo App/View/Base.lproj/Main.storyboard
+++ b/ToDo App/View/Base.lproj/Main.storyboard
@@ -18,6 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To-Do App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bPq-Sz-anL">
+                                <rect key="frame" x="16" y="118.99999999999999" width="361" height="25.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gx2-3B-0x6">
+                                <rect key="frame" x="0.0" y="160.33333333333331" width="393" height="657.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ml-r4-t9u">
                                 <rect key="frame" x="321" y="746" width="56" height="56"/>
                                 <color key="backgroundColor" name="AccentColor"/>
@@ -43,6 +53,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bPq-Sz-anL" secondAttribute="trailing" constant="16" id="59U-yM-z40"/>
+                            <constraint firstItem="gx2-3B-0x6" firstAttribute="top" secondItem="bPq-Sz-anL" secondAttribute="bottom" constant="16" id="5g8-Iy-6XX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gx2-3B-0x6" secondAttribute="trailing" id="Dd2-wV-Wc0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gx2-3B-0x6" secondAttribute="bottom" id="KE7-rd-044"/>
+                            <constraint firstItem="gx2-3B-0x6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MnC-QV-D3g"/>
+                            <constraint firstItem="bPq-Sz-anL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="SCf-ru-blK"/>
+                            <constraint firstItem="bPq-Sz-anL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="drs-lS-oq9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7ml-r4-t9u" secondAttribute="trailing" constant="16" id="g0h-Y0-G0i"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7ml-r4-t9u" secondAttribute="bottom" constant="16" id="yRa-2N-MpS"/>
                         </constraints>
@@ -50,6 +67,7 @@
                     <navigationItem key="navigationItem" id="N6C-U9-1sc"/>
                     <connections>
                         <outlet property="newToDoButton" destination="7ml-r4-t9u" id="Bzi-4D-ZAU"/>
+                        <outlet property="todoTableView" destination="gx2-3B-0x6" id="JOM-c4-bIU"/>
                         <segue destination="Tae-iW-P81" kind="show" identifier="moveCreateToDo" id="5Lr-vH-Exs"/>
                     </connections>
                 </viewController>
