--- a/ToDo App/Presentation/Main/ToDoTableViewCell.xib
+++ b/ToDo App/Presentation/Main/ToDoTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="250" id="KGk-i7-Jjw" customClass="ToDoTableViewCell" customModule="ToDo_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ToDoCell" rowHeight="261" id="KGk-i7-Jjw" customClass="ToDoTableViewCell" customModule="ToDo_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJ6-2l-c2J">
-                        <rect key="frame" x="16" y="8" width="288" height="65"/>
+                        <rect key="frame" x="16" y="8" width="288" height="76"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjs-CG-BXF">
                                 <rect key="frame" x="16.000000000000004" y="16" width="44.333333333333343" height="20.333333333333329"/>
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CBg-VN-A8e">
-                                <rect key="frame" x="16.000000000000004" y="52.333333333333343" width="43.333333333333343" height="20"/>
+                                <rect key="frame" x="16.000000000000004" y="48.333333333333343" width="43.333333333333343" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yX-Vb-R4F">
                                         <rect key="frame" x="7.9999999999999982" y="4" width="27.333333333333329" height="12"/>
@@ -47,12 +47,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="CBg-VN-A8e" secondAttribute="bottom" constant="16" id="Pve-cK-Bs6"/>
-                            <constraint firstItem="CBg-VN-A8e" firstAttribute="top" secondItem="Sjs-CG-BXF" secondAttribute="bottom" constant="12" id="alC-n8-6Om"/>
+                            <constraint firstItem="Sjs-CG-BXF" firstAttribute="top" secondItem="tJ6-2l-c2J" secondAttribute="top" constant="16" id="2e7-KI-APb"/>
                             <constraint firstItem="Sjs-CG-BXF" firstAttribute="leading" secondItem="tJ6-2l-c2J" secondAttribute="leading" constant="16" id="dJn-ZY-Cvx"/>
-                            <constraint firstItem="Sjs-CG-BXF" firstAttribute="top" secondItem="tJ6-2l-c2J" secondAttribute="top" constant="16" id="eXM-07-XJs"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CBg-VN-A8e" secondAttribute="trailing" constant="16" id="hWa-a5-qkS"/>
+                            <constraint firstAttribute="bottom" secondItem="CBg-VN-A8e" secondAttribute="bottom" constant="16" id="py1-LX-bB9"/>
                             <constraint firstItem="CBg-VN-A8e" firstAttribute="leading" secondItem="tJ6-2l-c2J" secondAttribute="leading" constant="16" id="tW0-df-geY"/>
+                            <constraint firstItem="CBg-VN-A8e" firstAttribute="top" secondItem="Sjs-CG-BXF" secondAttribute="bottom" constant="12" id="uAc-nk-0bm"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Sjs-CG-BXF" secondAttribute="trailing" constant="16" id="y14-Or-gy7"/>
                         </constraints>
                     </view>
@@ -66,12 +66,12 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="backgroundStatusLabel" destination="CBg-VN-A8e" id="eW3-C7-U6K"/>
+                <outlet property="backgroundStatusView" destination="CBg-VN-A8e" id="lHe-Tb-iKr"/>
                 <outlet property="cardView" destination="tJ6-2l-c2J" id="c4S-X0-uUk"/>
                 <outlet property="statusToDoLabel" destination="4yX-Vb-R4F" id="YWG-fW-WAv"/>
                 <outlet property="titleToDoLabel" destination="Sjs-CG-BXF" id="xBs-Lp-6zp"/>
             </connections>
-            <point key="canvasLocation" x="106.87022900763358" y="32.04225352112676"/>
+            <point key="canvasLocation" x="106.87022900763358" y="35.91549295774648"/>
         </tableViewCell>
     </objects>
     <resources>
